@@ -2,13 +2,13 @@
 <beanlist xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/xsd/1.1/beanlist.xsd">
    <service name="IntersenseEditor">
-      <file name="${VJ_BASE_DIR}/lib/vrjuggler/customeditors/IntersenseEditor.jar"
+      <file name="${VJ_BASE_DIR}/share/vrjuggler/beans/customeditors/IntersenseEditor.jar"
             class="org.vrjuggler.vrjconfig.customeditors.intersense.IntersensePanel"/>
       <dependencies>
          <bean>ConfigBroker</bean>
          <jar path="${JCCL_BASE_DIR}/share/jccl/beans">jccl_editors.jar</jar>
          <jar path="${TWEEK_BASE_DIR}/share/tweek/java">ui.jar</jar>
-         <jar path="${TWEEK_BASE_DIR}/lib/vrjuggler/customeditors">CustomEditors.jar</jar>
+         <jar path="${VJ_BASE_DIR}/share/vrjuggler/java">CommonEditors.jar</jar>
       </dependencies>
    </service>
 </beanlist>
